--- a/Laboratory_Activity_No_4.ipynb
+++ b/Laboratory_Activity_No_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoTVKa4MUcs/4dwIXLrMXo",
+      "authorship_tag": "ABX9TyPQ/IXojNNI6r9w6Ohe5aU0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +92,7 @@
         "id": "AHOgpBZeGaZp",
         "outputId": "8e76a815-c872-4a4f-8e41-7ef242eb0479"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "CUUPlhbxQ285"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "id": "srAY1xKqQ7Ip",
         "outputId": "7ad1f0c1-4985-49c0-a7a5-ae41aafd7e69"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +449,7 @@
         "id": "aarUOyYYRKlZ",
         "outputId": "9041ad84-d4df-4e6d-b0c2-085a69eee687"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "id": "0fpizIf8RVki",
         "outputId": "986faf62-e466-4f16-afdd-1d004ccf21bf"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
         "id": "IONE2AGQSk0R",
         "outputId": "8d26ba97-e6f1-4119-9924-5610a5cdbe45"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +603,7 @@
         "id": "5K7_sfwvVoZ6",
         "outputId": "22015f95-de88-4657-cc6a-29197187fce9"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,6 +616,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**OBSERVATION**\n",
+        "\n",
+        "THE `IN` OPERATOR CHECKS IF AN ELEMENT EXISTS IN A LIST, TUPLE, STRING, OR DICTIONARY KEYS, RETURNING `TRUE` OR `FALSE`. IT IS USEFUL IN CONDITIONAL STATEMENTS AND DYNAMIC USER INPUT VALIDATION. WHILE EFFICIENT IN DICTIONARIES AND SETS, IT MAY BE SLOWER IN LISTS AND TUPLES DUE TO LINEAR SEARCHING. ADDITIONALLY, IT CAN CHECK FOR SUBSTRINGS IN STRINGS. OVERALL, THE `IN` OPERATOR IS A POWERFUL TOOL FOR SEARCHING, VALIDATION, AND CONDITIONAL LOGIC IN PYTHON."
+      ],
+      "metadata": {
+        "id": "yN0FAvte3HDO"
+      }
     },
     {
       "cell_type": "markdown",
@@ -639,7 +650,7 @@
         "id": "t68_I4htWFCa",
         "outputId": "d096a4ea-0d10-468b-9a60-03eef4dcae8e"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +684,7 @@
         "id": "fTRiDqu0WOdh",
         "outputId": "a690c058-15d4-48c2-c714-f79474550094"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +738,7 @@
         "id": "MseXaax3WhWK",
         "outputId": "a30d1282-5e23-4215-d613-bf702a04573e"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +794,7 @@
         "id": "1F52VppdX0zC",
         "outputId": "44201f86-cf97-4dbb-c10f-626f4b5ff5da"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +857,7 @@
         "id": "bixo9Hh-aaei",
         "outputId": "014f23b1-4377-4e71-8b76-f0d576b93448"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +894,7 @@
         "id": "INSDURxycYly",
         "outputId": "5ad25890-d428-45d6-e4ad-dde5803665fc"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,7 +931,7 @@
         "id": "RIJdF-fjcgKx",
         "outputId": "d3ede212-44e0-4250-a410-ec015f1dc24c"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,7 +981,7 @@
         "id": "1BqkxgyvcwFw",
         "outputId": "00aa946e-c354-432c-cea9-9a9933bf1e37"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -998,7 +1009,7 @@
         "id": "V5r2dBwMdYAa",
         "outputId": "9f506702-d479-4b1e-d8f3-a6ecf808cd71"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1035,7 +1046,7 @@
         "id": "hPtj87QneQ47",
         "outputId": "a99d1688-1106-4375-d6d3-02037101b071"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1061,7 +1072,7 @@
         "id": "pFTGcFQ-eaxa",
         "outputId": "a308dcf1-aa79-4a45-a079-cf407dd1e98e"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1103,7 +1114,7 @@
         "id": "VS5F8fTQf8c7",
         "outputId": "6b178fc1-4164-4c10-ca4d-f02c92904999"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1139,7 +1150,7 @@
         "id": "4gKMy0EagMoE",
         "outputId": "ce46e239-9b5e-40d2-e1bc-7f9cf250b2e0"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1173,14 +1184,11 @@
         "\n",
         "import math\n",
         "\n",
-        "coordinate_list=[(1,1),(2,3)]\n",
-        "\n",
-        "x1, y1 = coordinate_list[0]\n",
-        "x2, y2 = coordinate_list[1]\n",
-        "\n",
+        "coordinates_list = [(1, 1), (2, 3)]\n",
+        "(x1, y1), (x2, y2) = coordinates_list\n",
         "distance = math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
         "\n",
-        "print(f\"The distance between the points {coordinate_list[0]} and {coordinate_list[1]} is: {distance:.2f}\")"
+        "print(f\"The distance between {coordinates_list[0]} and {coordinates_list[1]} is: {distance:.2f}\")"
       ],
       "cell_type": "code",
       "metadata": {
@@ -1188,15 +1196,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OuNKxknBhykk",
-        "outputId": "3d3c030f-dd5f-4bf8-ea25-6dfffa89142b"
+        "outputId": "d4478198-07d5-4d15-eb7e-0cc4fdd4e4cc"
       },
-      "execution_count": 167,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The distance between the points (1, 1) and (2, 3) is: 2.24\n"
+            "The distance between (1, 1) and (2, 3) is: 2.24\n"
           ]
         }
       ]
@@ -1206,25 +1214,79 @@
       "source": [
         "#SIMPLE WORD FILTER\n",
         "\n",
-        "def filter_stupid(input_string):\n",
-        "\n",
-        "    word_to_replace = \"stupid\"\n",
-        "\n",
-        "    replacement = '*' * len(word_to_replace)\n",
-        "\n",
-        "    modified_string = input_string.replace(word_to_replace, replacement)\n",
-        "\n",
-        "    return modified_string\n",
-        "\n",
         "input_string = input(\"Enter a string: \")\n",
-        "output_string = filter_stupid(input_string)\n",
+        "output_string = input_string.replace(\"stupid\", \"******\")\n",
         "print(\"Filtered string:\", output_string)\n"
       ],
       "metadata": {
-        "id": "-onDtCSZh6Rb"
+        "id": "-onDtCSZh6Rb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e363807-5c1e-44de-ed7a-90596771d207"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a string: stupid\n",
+            "Filtered string: ******\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#PHONEBOOK\n",
+        "\n",
+        "phonebook = [{\"id\": 111, \"name\": \"Filjohn\", \"contact\": \"0999-177-3876\", \"address\": \"Phase 9 Bagong Silang\"}, {\"id\": 222, \"name\": \"Maloi\", \"contact\": \"0961-334-1113\", \"address\": \"Block 68 Spain St.\"}, {\"id\": 333, \"name\": \"Jennie\", \"contact\": \"0988-545-1143\", \"address\": \"Block 45 Turkey St.\"},{\"id\": 444, \"name\": \"Mikha\", \"contact\": \"0943-535-1343\", \"address\": \"Block 12 Japan St.\"},{\"id\": 555, \"name\": \"Lisa\", \"contact\": \"0932-774-0009\", \"address\": \"Block 12 Korea St.\"}]\n",
+        "\n",
+        "id = int(input(\"Enter the ID of the contact: \"))\n",
+        "\n",
+        "for contact in phonebook:\n",
+        "    if contact[\"id\"] == id:\n",
+        "        print(f\"Name: {contact['name']}\")\n",
+        "        print(f\"Contact: {contact['contact']}\")\n",
+        "        print(f\"Address: {contact['address']}\")\n",
+        "        break\n",
+        "\n",
+        "else:\n",
+        "    print(f\"No contact found with ID {id}.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AKtLskO7kIyG",
+        "outputId": "d596f844-cf0b-4afc-c670-4916ef0cab8a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the ID of the contact: 222\n",
+            "Name: Maloi\n",
+            "Contact: 0961-334-1113\n",
+            "Address: Block 68 Spain St.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CONCLUSION**\n",
+        "\n",
+        "In summary, understanding lists, tuples, strings, and dictionaries is key to managing and organizing data effectively in Python. Lists offer flexibility for dynamic data, tuples provide stability for fixed values, strings handle text effortlessly, and dictionaries enable fast and efficient lookups. Tools like the replace() method further enhance our ability to manipulate and process text with ease. By mastering these foundational concepts, we can write cleaner, more efficient programs that handle data seamlessly, making our coding experience both productive and enjoyable."
+      ],
+      "metadata": {
+        "id": "rbIgRbtw46SP"
+      }
     }
   ]
 }
