--- a/LOOPING.ipynb
+++ b/LOOPING.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlOjzP5gmdgE8GP3XDvx8V",
+      "authorship_tag": "ABX9TyNyvD2sd1SBu6ROnA1183P2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,8 +38,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "#Example 1\n",
         "week=[\"Sunday\",\"Monday\",\"Tuesday\",\"Wednesday\",\"Thursday\",\"Friday\",\"Saturday\"]\n",
         "for x in week:\n",
@@ -52,7 +50,7 @@
         "id": "478iASzc1gaI",
         "outputId": "c97af7dd-338c-4680-bf7b-e6afa14eaaf5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +84,7 @@
         "id": "pPZMqNpK2iip",
         "outputId": "3bcb25a7-44c0-4646-8960-053a58fa2dca"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +116,7 @@
         "id": "PfA3sdrZ3EBY",
         "outputId": "3d9fc622-9f91-4829-f125-fa9c17a96caf"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +144,7 @@
         "id": "5CCgVg8P3fqp",
         "outputId": "38d82dc4-c2ba-4dad-a84b-a90cf4601cd2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +181,7 @@
         "id": "J_iIqSTF32UI",
         "outputId": "e85afd87-f01c-43ef-ca75-c78e5105cf0e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +211,7 @@
         "id": "W7abOGLG4z6w",
         "outputId": "cbe66d4b-5dc4-4c33-b638-24626ec599d0"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +252,7 @@
         "id": "KciNtRW35Cjw",
         "outputId": "a2ae4766-3ae3-4767-d784-c7ca6750f072"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +296,7 @@
         "id": "aECLqUPm6KPQ",
         "outputId": "38754253-e4f6-4fe7-bd5e-d9aee398bebe"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +338,7 @@
         "id": "iC8-p0dZ7E_o",
         "outputId": "3e7a647b-a49c-4cce-84e2-e6829ed7f34f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +377,7 @@
         "id": "cV6N6cV8-h3Z",
         "outputId": "e8635acb-b931-4162-965b-7ebb77fc7c8e"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +417,7 @@
         "id": "kvNrgOiJCSKB",
         "outputId": "c8796ea8-d8ea-4478-d671-7f3fc515972e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +455,7 @@
         "id": "TGdKET5OCVnh",
         "outputId": "c44abebd-afc6-460e-cfaf-b8b3e127bdcb"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,6 +472,136 @@
             "Hello 8\n",
             "Hello 9\n",
             "Hello 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**PRACTICAL TEST**\n",
+        "\n",
+        "Create a Python Program that displays integers less than 10 but not less than 3"
+      ],
+      "metadata": {
+        "id": "ekh33ImWE3Oi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=3\n",
+        "for x in range (3,10):\n",
+        "  print (x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "poF8vmTmQW_a",
+        "outputId": "31baddbf-65e6-4e1d-e0e6-420e7305cff3"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 3\n",
+        "while x < 10:\n",
+        "  print (x)\n",
+        "  x+=1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "552DZ4faO8fq",
+        "outputId": "59d08426-9f34-46ac-d443-3df41838b5e9"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = 3\n",
+        "while i < 10:\n",
+        "  print (i)\n",
+        "  i+=1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pN8ACrQtPVUy",
+        "outputId": "3d09fcf9-994f-4e1a-e3b1-61382777c595"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integer= {3,4,5,6,7,8,9}\n",
+        "print(integer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ttIyi4BzPnFa",
+        "outputId": "ab8d0acf-e86b-4149-f950-0dbc25bc3c67"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{3, 4, 5, 6, 7, 8, 9}\n"
           ]
         }
       ]
