--- a/LOOPING.ipynb
+++ b/LOOPING.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNyvD2sd1SBu6ROnA1183P2",
+      "authorship_tag": "ABX9TyPflm1qE1+V/Q/QHQmiZqRt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -490,7 +490,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x=3\n",
+        "#Example 1\n",
         "for x in range (3,10):\n",
         "  print (x)"
       ],
@@ -499,9 +499,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "poF8vmTmQW_a",
-        "outputId": "31baddbf-65e6-4e1d-e0e6-420e7305cff3"
+        "outputId": "d831b8ea-0be5-447a-d868-587c36277857"
       },
-      "execution_count": 77,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,6 +521,39 @@
     {
       "cell_type": "code",
       "source": [
+        "#Example 2\n",
+        "num = [3,4,5,6,7,8,9]\n",
+        "for x in num:\n",
+        "  print (x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TKDgRArIS2Mi",
+        "outputId": "1efb88dc-bf26-4211-ba69-3ddf3100c840"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example 3\n",
         "x = 3\n",
         "while x < 10:\n",
         "  print (x)\n",
@@ -546,62 +579,6 @@
             "7\n",
             "8\n",
             "9\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "i = 3\n",
-        "while i < 10:\n",
-        "  print (i)\n",
-        "  i+=1"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pN8ACrQtPVUy",
-        "outputId": "3d09fcf9-994f-4e1a-e3b1-61382777c595"
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "integer= {3,4,5,6,7,8,9}\n",
-        "print(integer)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ttIyi4BzPnFa",
-        "outputId": "ab8d0acf-e86b-4149-f950-0dbc25bc3c67"
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{3, 4, 5, 6, 7, 8, 9}\n"
           ]
         }
       ]
